# tokencount

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: main.rs
tests/: basic.rs
