[package]
name = "tokencount"
version = "0.1.0"
edition = "2021"
authors = ["Charles-André Assus"]
description = "Parallel CLI that counts GPT-style tokens across your codebase"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CharlonTank/tokencount"
homepage = "https://github.com/CharlonTank/tokencount"
readme = "README.md"
keywords = ["cli", "gpt", "tokens", "analysis", "productivity"]
categories = ["command-line-utilities", "development-tools", "text-processing"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
rayon = "1.8"
tiktoken-rs = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
globset = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.8"
serde_json = "1.0"

[[bin]]
name = "tokencount"
path = "src/main.rs"
